--- a/bookreviews.html
+++ b/bookreviews.html
@@ -386,8 +386,8 @@ Lastly, if you think this is just a plain old self help book everyone swears by,
 	  <center><h4>Book - <u>Big Magic</u><br>by Elizabeth Gilbert</h4></center>
       <p> Big Magic: How to Live a Creative Life, and Let Go of Your Fear is from the worldwide bestselling author
 	  <span id="dots12">...</span><span id="more12"> 
-	  Elizabeth Gilbert, who digs deep into her own creation process to share his wisdom and unique perspective
-	  on creativity. With deep empathy and radiant generosity, he offers powerful insights into the mysterious 
+	  Elizabeth Gilbert, who digs deep into her own creation process to share her wisdom and unique perspective
+	  on creativity. With deep empathy and radiant generosity, she offers powerful insights into the mysterious 
 	  nature of inspiration. She asks us to embrace our curiosity and give up unnecessary suffering. She shows 
 	  us how to deal with what we love most and how to deal with what we fear most. She discusses the attitudes,
 	  attitudes and habits we need to live our most creative lives. Balancing between spiritual spirituality and 
