--- a/articles.html
+++ b/articles.html
@@ -138,7 +138,7 @@
 #more5 {display: none;}   
 #more6 {display: none;}   
 #more7 {display: none;}   
-
+#more8 {display: none;}   
   
 .buttonreadmore {
   background-color: #fde3c6;
@@ -211,14 +211,14 @@ Spread positivity? Want to inspire others through articles?</span>
    I wonder what if we get everything we desire... without struggle, without hard work, without challenges, 
    and without sacrifices; some of us might take it as gold-born great but you would be weak, you won't be able
    to showcase strength when hard times hit, when life disdains, and you would be fighting it without
-   knowing your strength, and said so you couldn't grow without resistance. If you never had failures,
-   disappointments, setbacks, then regret is you might never know the true meaning of potential, courage, and compassion because 
-   these attributes are fired up when you see through how you grow through the struggle.
+   knowing your strength, and said so you won't be able to grow without resistance. If you never had failures,
+   disappointments, setbacks, then the regret is you might never know the true meaning of potential, courage, and 
+   compassion because these attributes are fired up when you see through how you grow through the struggle.
    Don't curse the skies if you run into struggling times rather capitalize the opportunity
    to thrive, and inspire others through it. You'll survive whatever is next. Next is a lesson. It'll make you
    stronger, it'll teach you patience, it'll showcase your spirit. You came with a purpose, you'll find it if 
-   you are committed to keep going. It'll all come good by the end and when it does,
-	    you won't have just inspired yourself, you will have inspired so many others. Your struggle is a chapter of your story.<br>
+   you are committed to keep going. It'll all come good by the end and when it does, you won't have just inspired
+   yourself, you will have inspired so many others. Your struggle is a chapter of your story. <br>
   <b> Pluck the petals of struggle,<br> The life would envy to blossom you and <br>
    Don't worry, if you pick a thorn;<br> Remember, the thorny stem.. later on<br>
    Produces the most magical roses.</b>
@@ -249,7 +249,8 @@ When we usually think about consistency, we think of habits such as waking up ev
 the gym every single day. But it doesn't have to be that way. We do not have to associate consistency with 
 an everyday practice Or at least, not at the beginning.
 For example, If you decide to go for a walk, thrice a week, and follow through, that would be consistency.
- That is only 3 days out of 7 days. But if you've ever struggled with self discipline, even 3 days could seem like a burden. So let's break it 
+ That is only 3 days out of 7 days.
+ But if you've ever struggled with self discipline, even 3 days could seem like a burden. So let's break it 
 down further.
 <br>Step 3: Combine your habit with something that you love
 In order to motivate yourself enough to go for that 3 day walk, combine it with something that you love.
@@ -401,6 +402,32 @@ He regarded his work on India’s nuclear weapons programme as a way to assert I
   <br><button class ="buttonreadmore" onclick="myFunction4()" id="myBtn4">Read now</button></p>
 <br>
   
+     <p id="borderimg1">
+  <b> <span style="font-size: 18px;"><u>The Hand The Rocks The Cradle Rules The World
+  </u></b></span> <br>by Aashray Mody<br>
+   <span id="dots8"></span><span id="more8">
+   When a person imagines what rules the world it’s the next nuclear power the next world power, but all 
+   of this seems frail when your mother acts as a force of change. 
+I was previously ashamed to admit that despite being a single child from a single mother I never appreciated 
+the joys of it. An emotional roller-coaster from thinking why as a child my dad didn’t want my custody always 
+in the back of mind to growing up and never understanding it.   
+I always knew it’s a good habit to be content to in what I have. I have never been averse to my mom or any 
+ungratefulness towards her. I would not be able speak up in anywhere, whenever a question be raised such as 
+“where is your dad” , or “why has your mom only come”. Truthfully speaking it was hard , sometimes in the lone 
+corners a slight tear would roll down my cheek thinking that whether I will be ever be able to answer with confidence. 
+As it has been said fortunes does favour the brave, I am grateful to be under the tutelage of my  schoolteacher 
+Patrick sir who helped me conquer all my fears. By listening to him and hearing from the first time that he 
+too had a similar childhood story like mine. Some of the points he said may sound very general however they 
+really helped me. 
+<br>Your mom was a fighter she fought for your custody she really loved you. So, what if you are a single 
+child that should not only increase your confidence but should have a sense of pride. You are your mothers’ 
+vision since she is a fighter and that spirit is embodied in you. 
+I would just like to conclude that yes, I have had my  downs but yes being a single child is a huge blessing 
+which I feel sheepish in saying that I realised late.
+  </span>
+  <br><button class ="buttonreadmore" onclick="myFunction8()" id="myBtn8">Read now</button></p>
+  <br>
+  
   </center>
 </div>
 </div>
@@ -411,8 +438,6 @@ He regarded his work on India’s nuclear weapons programme as a way to assert I
 	<i class="fa fa-twitter-square fa-2x social" style="color: #262626"></i></a>  
     <a href="https://www.linkedin.com/in/sarveshwinsome/" target="_blank">
 	<i class="fa fa-linkedin-square fa-2x social" style="color: #262626"></i></a>
-	<a href="https://medium.com/@saarveshannyy" target="_blank">
-	<i class="fa fa-medium fa-2x social" style="color: #262626"></i></a>
 	<a href="mailto:soulwaybysarvesh@gmail.com" target="_blank">
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
@@ -556,6 +581,23 @@ function myFunction7() {
     moreText.style.display = "inline";
   }
 }
+
+function myFunction8() {
+  var dots = document.getElementById("dots8");
+  var moreText = document.getElementById("more8");
+  var btnText = document.getElementById("myBtn8");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read now"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Done"; 
+    moreText.style.display = "inline";
+  }
+}
+
 
 </script>
 
