--- a/articles.html
+++ b/articles.html
@@ -441,7 +441,7 @@ which I feel sheepish in saying that I realised late.
 	<a href="mailto:soulwaybysarvesh@gmail.com" target="_blank">
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
-	<p style="font-family: Livvic";> &copy; SoulWay, 2020</p>
+	<p style="font-family: Livvic";> &copy; SoulWay, 2020. All rights reserved.</p>
 	</center>
 
 <b><i>Disclaimer:</b></i><br>
