--- a/bookreviews.html
+++ b/bookreviews.html
@@ -727,7 +727,7 @@ divided into chapters and each one is interconnected by another.
 	<a href="mailto:soulwaybysarvesh@gmail.com" target="_blank">
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
-	<p style="font-family: Livvic";> &copy; SoulWay, 2020</p>
+	<p style="font-family: Livvic";> &copy; SoulWay, 2020. All rights reserved.</p>
 	</center>
 	
 <b><i>Disclaimer:</b></i><br>
