--- a/profile.html
+++ b/profile.html
@@ -207,7 +207,7 @@ a {
 	<a href="mailto:soulwaybysarvesh@gmail.com" target="_blank">
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
-	<p style="font-family: Livvic";> &copy; SoulWay, 2020</p>
+	<p style="font-family: Livvic";> &copy; SoulWay, 2020. All rights reserved.</p>
 	</center>
 
 
