--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -257,7 +257,7 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
 	<a href="mailto:soulwaybysarvesh@gmail.com" target="_blank">
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
-	<p style="font-family: Livvic";> &copy; SoulWay, 2020</p>
+	<p style="font-family: Livvic";> &copy; SoulWay, 2020. All rights reserved.</p>
 </center>
 
 <b><i>Disclaimer:</b></i><br>
