--- a/articles.html
+++ b/articles.html
@@ -208,9 +208,9 @@ Spread positivity? Want to inspire others through articles?</span>
     <p id="borderimg1">
   <b> <span style="font-size: 18px;"><u>Petals of Struggle</u></b></span> <br>by Anny S.<br>
    <span id="dots5"></span><span id="more5">
-     I wonder what if we get everything we desire... without struggle, without hard work, without challenges, 
+      I wonder what if we get everything we desire... without struggle, without hard work, without challenges, 
    and without sacrifices; some of us might take it as gold-born great but you would be weak, you won't be able
-   to showcase strength when hard times hit, when life disdains. You would be fighting it without
+   to showcase strength when hard times hit, when life disdains and you would be fighting without
    knowing your strength. You won't be able to grow without resistance. If you never had failures,
    disappointments, setbacks, then regret is.. you might never know the true meaning of potential, courage, and 
    compassion because these attributes are fired up when you see through how you grow through the struggle.
