--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ img {vertical-align: middle;}
 }
 
 .notification {
-  background-image:url(imgs/bellgoldy.png);
+  background-image:url(imgs/bellgoldy.jpg);
   color: white;
   text-decoration: none;
   font-size: 18px;
