--- a/newyeargear.html
+++ b/newyeargear.html
@@ -249,7 +249,7 @@
 <div style="overflow:auto">
   <div class="main">
   
-   <center><img src="imgs/tryny.gif" style="width:100%;"></center>
+   <center><img src="imgs/tryny.gif" style="width:100%; height:100%;"></center>
 
 <div style="font-size: 14px;background: linear-gradient(to left, #ffcccc 0%, #993366 100%);">
     
