--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@ img {vertical-align: middle;}
   background-color: #f3edbf;
   border-radius: 12px;
 }
-
+img.a {
+  vertical-align: 95%;
+}
 </style>
 </head>
 <body style="font-family: Livvic;">
@@ -263,7 +265,9 @@ img {vertical-align: middle;}
 <br>	
 
 
-<button class="buttonsty" onclick="typeWriter()"><b>Magic Quote of the Week</b></button><p id="demo"></p>
+<button class="buttonsty" onclick="typeWriter()"><b>Magic Quote of the Week</b></button>
+<img class="a" src="imgs/new1.gif" style="width:23px;height:12px;">
+<p id="demo"></p>
 
 <p id="demoz"></p>
   </center>
