--- a/profile.html
+++ b/profile.html
@@ -281,13 +281,13 @@ words[1] = "Choose to shine your efforts"
 words[2] = "Don't you dare to give up"
 words[3] = "Spark is one hot start"
 words[4] = "Get stuck with innocence"
-words[5] = "Make yourself proud"
+words[5] = "Brighten your faded glory"
 words[6] = "Keep the momentum going"
 words[7] = "Push your so called limits"
 words[8] = "Preparation be dope"
 words[9] = "It's paradise in bliss"
 words[10] = "Hope to win the risk"
-words[11] = "Untie the demolishing string"
+words[11] = "Untie your capable string"
 words[12] = "Your charm is a story"
 words[13] = "Improve and rise - repeat"
 words[14] = "Gear up your savage"
