--- a/index.html
+++ b/index.html
@@ -192,6 +192,19 @@ img {vertical-align: middle;}
   color: black;
   border: 1px solid black;
 }
+  
+.inbox {
+  position: relative;
+  text-align: center;
+  color: black;
+}
+
+.centered {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 </style>
 </head>
 <body style="font-family: Livvic;">
@@ -269,10 +282,15 @@ img {vertical-align: middle;}
 	<b> A LITTLE WARRIOR WAS MADE.</b><br>
 		<center>
 		<br>
-<div class="containerimg">
-      <a href="newyeargear.html" class="notification">
+		
+	<div class="containerimg">
+		<a href="newyeargear.html" class="notification">
   <span class="badge">2021</span>
 </a>
+  </div>
+  	  <div class="inbox">
+      <img src="imgs/yelobg.png" style="width:270px;height:27px;">
+ <div class="centered"><h4>Click <i class="fa fa-hand-pointer-o fa-lg"></i> to enter</h4></div>	  
   </div>
   <br>
 
@@ -285,7 +303,6 @@ img {vertical-align: middle;}
 	</p>
 	</span>
 	
-	<center>
 		<img src="imgs/stw.gif" width="325px" height="325px"><br>
 		  <hr style="height:1px;border-width:0;background-color:#ebe094">
   <br>
