--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -114,7 +114,7 @@
 }
 .buttonsty {
   padding: 10px 10px;
-  font-size: 20px;
+  font-size: 18px;
   font-family:Livvic;
   text-align: center;
   cursor: pointer;
@@ -123,9 +123,8 @@
   background-color: #faebed;
   border-radius: 12px;
 }
-
 img.a {
-  vertical-align: 95%;
+  vertical-align: -50%;
 }
 </style>
 </head>
@@ -160,11 +159,11 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
   <div class="main">
   
   
-<button class="buttonsty" onclick="typeWriter()"><b>Magic Quote of the Week</b></button>
-<img class="a" src="imgs/new1.gif" style="width:23px;height:12px;">
+<button class="buttonsty" onclick="typeWriter()"><b>Magic Quote of the Week</b>
+</button>
+<img class="a" src="imgs/clickbtn.jpg" style="width:28px;height:34px;">
 
-<p id="demoz"></p>
-  
+<p id="demoz"></p>  
   <br><br></b>
 	
 	<div class="containerimg">
