--- a/profile.html
+++ b/profile.html
@@ -187,6 +187,9 @@ a {
     color: #black;
     transition: 1s linear;
 }
+img.a {
+  vertical-align: -65%;
+}
 </style>
 </head>
 <body style="font-family:Livvic;">
@@ -226,8 +229,11 @@ a {
 <center>
   	<FORM NAME="WordForm">  
 <INPUT TYPE=TEXT NAME="WordBox" class="wordbox">
+
 <INPUT TYPE=BUTTON VALUE="Don't forget to generate" class="btnsty" onClick="PickRandomWord(document.WordForm);">
+<img class="a" src="imgs/generatebtm.jpg" style="width:28px;height:34px;">
 </FORM>
+
 
 <br><br>
 <div class="containerimg">
