--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ img {vertical-align: middle;}
 </a>
   </div>
   	  <div class="inbox">
-      <img src="imgs/yelobg.png" style="width:270px;height:27px;">
+      <img src="imgs/yelobg.jpg" style="width:270px;height:27px;">
  <div class="centered"><h4>Click <i class="fa fa-hand-pointer-o fa-lg"></i> to enter</h4></div>	  
   </div>
   <br>
