--- a/newyeargear.html
+++ b/newyeargear.html
@@ -257,18 +257,7 @@
 
   <div class="container left">
     <div class="content">
-      <h3>2021 - <del>Giving up?</del> <ins>Never</ins></h3>
-      <p>Mind control is the biggest difference between what could be done just for a moment and what could be
-	  done consistently over and over again, till you and your goals are satisfied. Similar consistency is
-	  indulged when you're in the process of achieving something, it's the spirit that accustoms your never ending efforts.
-	  You may probably fall many times but you would definitely succeed 'sooner' or 'later', now here 'sooner' 
-	  is reached by staying consistent and never ever giving up, no matter what!
-	  </p>
-	  </div>
-  </div>
-    <div class="container right">
-    <div class="content">
-      <h3>2021 - High-5 to Positivity</h3>
+	 <h3>2021 - High-5 to Positivity</h3>
       <p>There are two surreal and unreal friends which you come across throughout your life. 
 	  One is the positive aspect of everything and other is the one which doesn't let you practice the positive aspect. 
 Building relationship with the positive aspects is one of the most precious practice that you have 
@@ -276,7 +265,17 @@ to follow in this every passing minute. Landing your thinking in a positive proc
 which destroys your self-confidence. Challenges, hard times and struggles are the part of the process, you have to
 stick your efforts together and give a 'smashing high-5 to the positivity' and leave the other baffling process aside.
 As you can note, I haven't used the word 'negativity', oh yes! as I mentioned, there shall be no role of it in our lives.
-	  
+      </p>
+	  </div>
+  </div>
+    <div class="container right">
+    <div class="content">
+     <h3>2021 - <del>Giving up?</del> <ins>Never</ins></h3>
+      <p>Mind control is the biggest difference between what could be done just for the sake of a moment and what could be
+	  done consistently over and over again, till you and your goals are satisfied. Similar consistency is
+	  indulged when you're in the process of achieving something, it's the spirit that accustoms your never ending efforts.
+	  You may probably fall several times but you would definitely succeed 'sooner' or 'later', now here 'sooner' 
+	  is reached by staying consistent and never ever giving up, no matter what!
 	  </p>
 	  </div>
   </div>
