--- a/newyeargear.html
+++ b/newyeargear.html
@@ -261,7 +261,7 @@
       <p>There are two surreal and unreal friends which you come across throughout your life. 
 	  One is the positive aspect of everything and other is the one which doesn't let you practice the positive aspect. 
 Building relationship with the positive aspects is one of the most precious practice that you have 
-to follow in this every passing minute. Landing your thinking in a positive process is far better than anything
+to follow in these every passing minutes. Landing your thinking in a positive process is far better than anything
 which destroys your self-confidence. Challenges, hard times and struggles are the part of the process, you have to
 stick your efforts together and give a 'smashing high-5 to the positivity' and leave the other baffling process aside.
 As you can note, I haven't used the word 'negativity', oh yes! as I mentioned, there shall be no role of it in our lives.
