--- a/newyeargear.html
+++ b/newyeargear.html
@@ -264,7 +264,7 @@ Building relationship with the positive aspects is one of the most precious prac
 to follow in these every passing minutes. Landing your thinking in a positive process is far better than anything
 which destroys your self-confidence. Challenges, hard times and struggles are the part of the process, you have to
 stick your efforts together and give a 'smashing high-5 to the positivity' and leave the other baffling process aside.
-As you can note, I haven't used the word 'negativity', oh yes! as I mentioned, there shall be no role of it in our lives.
+As you can note, I haven't used the word 'negativity', oh yes! as I tried to mention, there shall be no role of it in our lives.
       </p>
 	  </div>
   </div>
