--- a/newyeargear.html
+++ b/newyeargear.html
@@ -258,7 +258,7 @@
   <div class="container left">
     <div class="content">
 	 <h3>2021 - High-5 to Positivity</h3>
-      <p>There are two surreal and unreal friends which you come across throughout your life. 
+      <p>There are two surreal friends which you come across throughout your life. 
 	  One is the positive aspect of everything and other is the one which doesn't let you practice the positive aspect. 
 Building relationship with the positive aspects is one of the most precious practice that you have 
 to follow in these every passing minutes. Landing your thinking in a positive process is far better than anything
