--- a/newyeargear.html
+++ b/newyeargear.html
@@ -38,8 +38,8 @@
   color: #d9d9d9;
 }
 
-.header-right {
-  float: right;
+.header-left {
+  float: left;
   font-weight: bold;
 }
 
@@ -50,7 +50,7 @@
     text-align: left;
   }
   
-  .header-right {
+  .header-left {
     float: none;
   }
 }
@@ -70,8 +70,7 @@
 	width:100%;
 	padding: 10px;
 }
-
-
+	
 @media only screen and (max-width:800px) {
   /* For tablets: */
   .main {
