--- a/bookreviews.html
+++ b/bookreviews.html
@@ -184,7 +184,10 @@
 img.a {
   vertical-align: 50%;
 }
-
+img {
+    max-width: 100%;
+    height: auto;
+}
 </style>
 </head>
 <body style="font-family:Livvic;">
