--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@ img {vertical-align: middle;}
   left: 50%;
   transform: translate(-50%, -50%);
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
 </style>
 </head>
 <body style="font-family: Livvic;">
