--- a/newyeargear.html
+++ b/newyeargear.html
@@ -225,6 +225,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
 </style>
 </head>
 <body style="font-family: Livvic;">
