--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -126,6 +126,10 @@
 img.a {
   vertical-align: -50%;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
 </style>
 </head>
 <body onload="startTime()" style="font-family:Livvic;">
