--- a/newyeargear.html
+++ b/newyeargear.html
@@ -58,7 +58,6 @@
 .main {
   float: center;
   width: 100%;
-  padding: 0 20px;
   overflow: hidden;
 }
 
@@ -70,11 +69,12 @@
 	width:100%;
 	padding: 10px;
 }
-	
+
+
 @media only screen and (max-width:800px) {
   /* For tablets: */
   .main {
-    width: 80%;
+    width: 100%;
     padding: 0;
 	align: center;
   }
@@ -252,7 +252,8 @@ img {
 <div style="overflow:auto">
   <div class="main">
   
-   <center><img src="imgs/tryny.gif" style="width:100%;"></center>
+   <center><img src="imgs/tryny1.gif" style="max-width: 100%;
+    height: auto;"></center>
 
 <div style="font-size: 14px;background: linear-gradient(to left, #ffcccc 0%, #993366 100%);">
     
