--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -10,7 +10,6 @@
   box-sizing: border-box;
 }
 
-
 .header {
   overflow: hidden;
   background-color: #ecb7bf;
@@ -68,7 +67,7 @@
 @media only screen and (max-width:800px) {
   /* For tablets: */
   .main {
-    width: 80%;
+    width: 100%;
     padding: 0;
 	align: center;
   }
@@ -180,6 +179,11 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
   </div>
 	<hr style="height:1px;border-width:0;background-color:#ecb7bf">
 
+	<br><div class="containerimg">
+      <img src="imgs/19.jpg" style="width:300px;height:300px;">
+  </div>
+    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
+	
 		<br><div class="containerimg">
       <img src="imgs/16.jpg" style="width:300px;height:300px;">
   </div>
@@ -187,6 +191,11 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
 	
 	<br><div class="containerimg">
       <img src="imgs/3.jpg" style="width:300px;height:300px;">
+  </div>
+    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
+	
+	<br><div class="containerimg">
+      <img src="imgs/18.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
