--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 .main {
   float: center;
   width: 100%;
-  padding: 0 20px;
   overflow: hidden;
 }
 
@@ -76,7 +75,7 @@
 @media only screen and (max-width:800px) {
   /* For tablets: */
   .main {
-    width: 80%;
+    width: 100%;
     padding: 0;
 	align: center;
   }
@@ -209,6 +208,9 @@ img {
     max-width: 100%;
     height: auto;
 }
+#fixedbutton {
+position: static;
+}
 </style>
 </head>
 <body style="font-family: Livvic;">
@@ -297,7 +299,7 @@ img {
  <div class="centered"><h4>Click <i class="fa fa-hand-pointer-o fa-lg"></i> to enter</h4></div>	  
   </div>
   <br>
-
+  
 	<div style="background-color: #f3edbf"><b><center>
 	We encourage you to send your content in course of 
 	book reviews and articles. We'll post them for you. On a light note, we would be highly obliged 
@@ -308,10 +310,13 @@ img {
 	</span>
 	
 		<img src="imgs/stw.gif" width="325px" height="325px"><br>
+	
   <br>
     <img src="imgs/rewardeey.png" width="325px" height="325px" onclick="alert('Go to - Book Reviews and Articles')" >
-	</center>
-  
+</center>
+	<br>
+  <a href="chat.html"><img src="imgs/chat.png" width="60px" height="60px" id="fixedbutton" align="right"> </a>
+  	
 </div>
 </div>
 
