--- a/chat.html
+++ b/chat.html
@@ -275,9 +275,22 @@ function showResponse() {
       ++num;
       setTimeout(changeQuestion, 7000);
     }
-	
+	 else if(c==3)
+   {
+      output.innerHTML="Wow! The motivation is as sparkling as you. Consistsency is the key and improvement leads to infinity.";
+      inputBox.setAttribute("placeholder", "");
+      ++num;
+      setTimeout(changeQuestion, 7000);
+    }
+	 else if(c==2)
+   {
+      output.innerHTML="Not bad but there's more scope to reach greater heights. Rise with positivity, rise with motivation.";
+      inputBox.setAttribute("placeholder", "");
+      ++num;
+      setTimeout(changeQuestion, 7000);
+    }
     else {
-      output.innerHTML="Not bad, you just have to believe in yourself and your motivation would be rated even more highly.";
+      output.innerHTML="Don't worry, you just have to believe in yourself and your motivation would be rated even more highly.";
       inputBox.setAttribute("placeholder", "");
       ++num;
       setTimeout(changeQuestion, 7000);
