--- a/profile.html
+++ b/profile.html
@@ -232,7 +232,8 @@ img {
 <INPUT TYPE=TEXT NAME="WordBox" class="wordbox">
 
 <INPUT TYPE=BUTTON VALUE="Don't forget to generate" class="btnsty" onClick="PickRandomWord(document.WordForm);">
-<img class="a" src="imgs/generatebtm.jpg" style="width:28px;height:34px;">
+<img class="a" onClick="PickRandomWord(document.WordForm)";
+src="imgs/generatebtm.jpg" style="width:26px;height:31px;">
 </FORM>
 
 
