--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -112,7 +112,7 @@
   position: relative;
 }
 .buttonsty {
-  padding: 10px 10px;
+  padding: 7px 7px;
   font-size: 18px;
   font-family:Livvic;
   text-align: center;
@@ -162,9 +162,8 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
   <div class="main">
   
   
-<button class="buttonsty" onclick="typeWriter()"><b>Magic Quote of the Week</b>
-</button>
-<img class="a" src="imgs/clickbtn.jpg" style="width:28px;height:34px;">
+<button class="buttonsty" onclick="typeWriter()"><b>Magic Quote of the Week</b> </button>
+<img class="a"  onclick="typeWriter()" src="imgs/magqot.png" style="width:26px;height:31px;">
 
 <p id="demoz"></p>  
   <br><br></b>
