--- a/newyeargear.html
+++ b/newyeargear.html
@@ -309,7 +309,7 @@ People dignify the glory of your efforts with your journey. Show them the way.
       <h3>2021 - One New Thing</h3>
       <p>Devote important 15 minutes of your day in learning one new thing, be it as simple as correctly pronouncing
 	  some messy words to the high advancements in some knowledge, or anything which drives your zeal. Just make 
-	  sure you hold on to the process of either learning or implementing a few new things, it would not only
+	  sure you hold on to the process of either learning or implementing a few new things, it'll not only
 	  help you feel the crucial happiness of accomplishment but also provides you an edge over the lost confidence.
 </p>	 
  </div>
